feat: short URL creation works via the API
