# src/docs/swagger.json
@@ -21,7 +21,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "APIKeyAuth": []
                     }
                 ],
                 "description": "Register new user",
@@ -75,7 +75,7 @@
                 }
             }
         },
-        "/api/v1/users/:id": {
+        "/api/v1/users/:userid": {
             "get": {
                 "description": "Get user info",
                 "consumes": [
@@ -129,7 +129,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "APIKeyAuth": []
                     }
                 ],
                 "description": "Login user",
@@ -162,7 +162,7 @@
                             "$ref": "#/definitions/dtos.UserResponse"
                         }
                     },
-                    "400": {
+                    "401": {
                         "description": "Invalid email or password",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorResponse"
@@ -197,10 +197,68 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Create random short url",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "urls"
+                ],
+                "summary": "Create random short url",
+                "operationId": "create-random-url",
+                "parameters": [
+                    {
+                        "description": "Url",
+                        "name": "url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.CreateUrlRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UrlResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "The request body is not valid",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "long_url is required to create url",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
+        "dtos.CreateUrlRequest": {
+            "type": "object",
+            "properties": {
+                "long_url": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -236,6 +294,19 @@
                 }
             }
         },
+        "dtos.UrlResponse": {
+            "type": "object",
+            "properties": {
+                "long_url": {
+                    "type": "string",
+                    "example": "https://www.google.com"
+                },
+                "short_url": {
+                    "type": "string",
+                    "example": "nhg145"
+                }
+            }
+        },
         "dtos.UserResponse": {
             "type": "object",
             "properties": {
@@ -255,7 +326,7 @@
         }
     },
     "securityDefinitions": {
-        "API Key": {
+        "APIKeyAuth": {
             "type": "apiKey",
             "name": "X-API-Key",
             "in": "header"
