# src/dtos/http_requests.go
@@ -1,5 +1,7 @@
 package dtos
 
+/// User requests
+
 type CreateUserRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
@@ -8,4 +10,10 @@ type CreateUserRequest struct {
 type LoginUserRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
+}
+
+/// URL Requests
+
+type CreateUrlRequest struct {
+	LongUrl string `json:"long_url"`
 }
